--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,17 +6,23 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
         
-    # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'  # Adjust based on your Python version
-          
-      # Step 2: Set up Docker
+          python-version: '3.11' 
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 
+    
+      - name: Run flake8
+        run: |
+          flake8 --ignore=E501,E402 src/
+        
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
       
@@ -24,38 +30,34 @@ jobs:
         run: |
           sudo curl -L "https://github.com/docker/compose/releases/download/v2.5.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
-      # Step 3: Install pipenv
+          
       - name: Install pipenv
         run: pip install pipenv
         
       - name: Create external Docker network
         run: docker network create llm-rag-network || true
         
-      # Step 3: Build Docker image
       - name: Build Docker image
         run: docker build -t test-image -f src/Dockerfile .
 
-      # Step 4: Start services with Docker Compose
       - name: Start services
         run: docker compose -f src/docker-compose.yml up -d
 
-      # Step 5: Install dependencies
       - name: Install dependencies
         run: |
           PIPENV_PIPFILE=src/Pipfile pipenv install --deploy --dev
-      # Step 6: Run tests and generate coverage report
+
       - name: Run tests with coverage
         run: |
           mkdir -p coverage-reports
           PIPENV_PIPFILE=src/Pipfile pipenv run pytest --cov=src --cov-report=xml:coverage-reports/coverage.xml --cov-report=html:coverage-reports/html
-      # Step 7: Upload coverage reports as artifacts
+
       - name: Upload coverage reports
         uses: actions/upload-artifact@v3
         with:
           name: coverage-reports
           path: coverage-reports
 
-      # Step 8: Tear down Docker Compose services
       - name: Tear down services
         if: always()
         run: docker compose -f src/docker-compose.yml down
