--- a/src/datapipeline/docker-compose.yml
+++ b/src/datapipeline/docker-compose.yml
@@ -7,11 +7,13 @@ services:
         image: llm-rag-cli
         container_name: llm-rag-cli
         volumes:
-            - ../secrets:/secrets
-            - ../llm-rag:/app
+            - ../../../secrets:/secrets
+            - ../datapipeline:/app
         environment:
             GOOGLE_APPLICATION_CREDENTIALS: $GOOGLE_APPLICATION_CREDENTIALS
             GCP_PROJECT: $GCP_PROJECT
+            CHROMADB_HOST: llm-rag-chromadb
+            CHROMADB_PORT: 8000
         depends_on:
             - chromadb
     chromadb:
