--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
     
       - name: Run flake8
         run: |
-          flake8 --ignore=E501,E402 src/
+          flake8 --ignore=E501,E402 --exclude=src/frontend,src/api-service src
         
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
