--- a/src/deployment/inventory.yml
+++ b/src/deployment/inventory.yml
@@ -1,7 +1,7 @@
 all:
     vars:
-      ansible_user: sa_100110341521630214262
-      ansible_ssh_private_key_file: "../../secrets/ssh-key-deployment"
+      ansible_user: sa_114888692734786446408
+      ansible_ssh_private_key_file: "../secrets/ssh-key-deployment"
       gcp_service_account_file: "../secrets/deployment.json"
       gcp_service_account_email: "deployment@ac215-project-438523.iam.gserviceaccount.com"
       gcp_auth_kind: "serviceaccount"
