--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: Run Tests
 on:
   push:
-    branches: [ milestone4, tests ]
+    branches: [ main ]
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -21,7 +21,7 @@ jobs:
     
       - name: Run flake8
         run: |
-          flake8 --ignore=E501,E402 --exclude=src/frontend,src/api-service src
+          flake8 --ignore=E501,E402 --exclude=src/frontend,src/api-service,src/deployment src
         
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
